// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applyTheme renders correctly 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); justify-content: center; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 20px; width: 20px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`defaultProps should render correctly for color 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; justify-content: center;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 20px; width: 20px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`modes renders correctly for applyTheme 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); justify-content: center; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 20px; width: 20px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #eeedfd; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #eeedfd; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`modes renders correctly for overrides 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); justify-content: center; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 20px; width: 20px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`modes should render correctly when colorMode is set globally 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; background-color: rgb(239, 68, 68); justify-content: center;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 20px; width: 20px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #eeedfd; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #eeedfd; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`modes should render correctly when colorMode set as prop 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; background-color: rgb(239, 68, 68); justify-content: center;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 20px; width: 20px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #eeedfd; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #eeedfd; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`overrides should render correctly 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); justify-content: center; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 20px; width: 20px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; justify-content: center;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 20px; width: 20px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`props should render correctly for size 50px 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; justify-content: center;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 50px; width: 50px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`props should render correctly for size default 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; justify-content: center;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 20px; width: 20px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`props should render correctly for size large 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; justify-content: center;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 36px; width: 36px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`props should render correctly for size medium 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; justify-content: center;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 28px; width: 28px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`props should render correctly for size small 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; justify-content: center;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 16px; width: 16px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`props should render correctly with color 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; justify-content: center;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 20px; width: 20px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`theming Spinner.styles.base should render correctly 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; background-color: rgb(239, 68, 68); justify-content: center;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 20px; width: 20px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`theming Spinner.styles.base should render correctly 2`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; background-color: rgb(87, 79, 235); justify-content: center;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 20px; width: 20px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`variants renders correctly for applyTheme 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; box-shadow: 0px 1px 4px rgba(0,0,0,0.15); justify-content: center; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 20px; width: 20px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #ef4444; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #ef4444; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`variants renders correctly for overrides 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); justify-content: center; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 20px; width: 20px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
<div
  aria-valuemax="1"
  aria-valuemin="0"
  class="css-view-1dbjc4n"
  role="progressbar"
  style="align-items: center; background-color: rgb(239, 68, 68); justify-content: center;"
>
  <div
    class="css-view-1dbjc4n r-animationKeyframes-127358a"
    style="animation-duration: 0.75s; animation-iteration-count: infinite; animation-timing-function: linear; height: 20px; width: 20px;"
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; opacity: 0.2;"
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        stroke-width="4"
        style="stroke: #574feb; stroke-dasharray: 80; stroke-dashoffset: 60;"
      />
    </svg>
  </div>
</div>
`;
